--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p class="lead mb-5">Saya Lulusan dari SMK ALBASYARIAH dengan jurusan Teknik Komputer dan Jaringan. Saya adalah seorang pekerja keras yang tidak mudah puas dengan hasil yang dicapai, saya juga suka belajar hal-hal baru untuk meningkatkan kemampuan saya.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.instagram.com/khliill10?igsh=ejR2bXJrcnE1N3Uw"><i class="fab fa-instagram"></i></a>
-                        <a class="social-icon" href="https://github.com/Alfarobby27"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/muhammadkholil10"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://wa.me/6285892285018"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
